--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "@types/swiper": "^6.0.0",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "swiper": "^9.0.4",
     "typescript": "4.9.5"
   },
   "devDependencies": {
