--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^4.24.6",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "@types/swiper": "^6.0.0",
+    "axios": "^1.3.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
+    "js-cookie": "^3.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
-    "react-query": "^3.39.3",
+    "react-query-auth": "^2.1.1",
     "swiper": "^9.0.4",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
