--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
     "js-cookie": "^3.0.1",
+    "material-react-table": "^1.8.2",
     "material-ui-popup-state": "^5.0.4",
     "next": "13.1.6",
     "prop-types": "^15.7.2",
