--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-query-auth": "^2.1.1",
     "react-toastify": "^9.1.1",
     "swiper": "^9.0.4",
-    "typescript": "4.9.5",
+    "typescript": "^4.9.5",
     "zod": "^3.20.6"
   },
   "devDependencies": {
