--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/font": "13.1.6",
     "@tanstack/react-query": "^4.24.6",
     "@tanstack/react-query-devtools": "^4.24.10",
+    "@types/humps": "^2.0.2",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
@@ -26,6 +27,7 @@
     "axios": "^1.3.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
+    "humps": "^2.0.1",
     "js-cookie": "^3.0.1",
     "material-react-table": "^1.8.2",
     "material-ui-popup-state": "^5.0.4",
